--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,22 +22,34 @@
 /*various headings*/
 h1 {
   font-size: 300%;
+  margin-top: 4em;
 }
 
 h2 {
   font-size: 200%;
 }  
 
-h3  {
-  font-size: 150%;
+h4  {
+  margin-top: 1em;
 }
-  ol, ul {
+
+ol, ul {
     list-style: none;
   }
+button {
+  background-color: purple;
+  color: yellow;
+  margin: 1em;
+  padding: 1em;  
+}
 
+body {
+  text-align: center;
+  padding: 1em;
+}
 
   /* Matches the font of special elements to the rest of the page */
-  input, select, option, optgroup, textarea, button,
+input, select, option, optgroup, textarea, button,
   pre, code {
     font-size: 100%;
     font-family: inherit;
