--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,14 +12,13 @@
   }
   
   header{
-
+    margin: 1em;
+    background-color: grey;
+    color: white;
+    padding: 1em;
   }
 
-  nav{
-
-  }
-
-/*various headings*/
+  /*various headings*/
 h1 {
   font-size: 300%;
   margin-top: 4em;
@@ -28,7 +27,9 @@ h1 {
 h2 {
   font-size: 200%;
 }  
-
+a {
+  text-decoration: none;
+}
 h4  {
   margin-top: 1em;
 }
@@ -37,13 +38,28 @@ ol, ul {
     list-style: none;
   }
 button {
-  background-color: purple;
+  margin-top: 1em;
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
   color: yellow;
-  margin: 1em;
-  padding: 1em;  
+  background-color: purple;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+button:hover {
+  background-color: #bb1e87
+}
+button:active {
+  background-color: purple;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
-body {
+main {
   text-align: center;
   padding: 1em;
 }
