--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,3 +76,9 @@ input, select, option, optgroup, textarea, button,
     font-size: 100%;
     font-family: inherit;
   }
+
+.clearfix {
+  margin: 2em;
+  display: flex;
+  justify-content: space-evenly;
+}
